fix: mobile code block word-wrap (white-space: pre-wrap)

--- a/themes/custom/source/css/style.styl
+++ b/themes/custom/source/css/style.styl
@@ -997,6 +997,13 @@ body {
   .post-content pre {
     padding: 0.75rem;
     font-size: 0.85rem;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+  }
+  
+  .post-content pre code {
+    white-space: pre-wrap;
+    word-wrap: break-word;
   }
   
   .post-content ul,
